--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "keywords": [
     "api"
   ],
   "devDependencies": {
-    "@redocly/cli": "^1.0.0-beta.108"
+    "@redocly/cli": "^1.0.0-beta.108",
+    "husky": "^8.0.1"
   }
 }
