--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     ],
     "devDependencies": {
         "@redocly/cli": "^1.0.0-beta.108",
-        "husky": "^8.0.1"
+        "@swc/cli": "^0.1.57",
+        "@swc/core": "^1.2.247",
+        "husky": "^8.0.1",
+        "typescript": "^4.8.2"
     }
 }
