--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
         "@redocly/cli": "^1.0.0-beta.108",
         "@swc/cli": "^0.1.57",
         "@swc/core": "^1.2.247",
+        "@swc/jest": "^0.2.22",
+        "@types/jest": "^29.0.0",
+        "@types/node": "^18.7.15",
         "husky": "^8.0.1",
+        "jest": "^29.0.2",
         "typescript": "^4.8.2"
     }
 }
