--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
         "@swc/cli": "^0.1.57",
         "@swc/core": "^1.2.247",
         "@swc/jest": "^0.2.22",
+        "@types/express": "^4.17.13",
         "@types/jest": "^29.0.0",
+        "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
         "husky": "^8.0.1",
         "jest": "^29.0.2",
         "typescript": "^4.8.2"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "morgan": "^1.10.0"
     }
 }
