--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "@types/jest": "^29.0.0",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
+        "@types/supertest": "^2.0.12",
         "husky": "^8.0.1",
         "jest": "^29.0.2",
+        "supertest": "^6.2.4",
         "typescript": "^4.8.2"
     },
     "dependencies": {
