--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
         "esbuild": "^0.15.7",
         "husky": "^8.0.1",
         "jest": "^29.0.2",
+        "prisma": "^4.3.1",
         "supertest": "^6.2.4",
         "typescript": "^4.8.2"
     },
     "dependencies": {
+        "@prisma/client": "^4.3.1",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "morgan": "^1.10.0"
