--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,59 @@
 version: '3.9'
 services:
-  backend:
-    container_name: api
-    restart: always
+  # main backend container
+  app:
+    # in development process, shuts down the container that may have any issue
+    # and let developers to inspect this in detail.
+    restart: on-failure:2 # give 2 chances
     build:
-      dockerfile: ./Dockerfile
+      # find dockerfile from root
+      context: .
+      # in development process, do not bundle code
+      # to make it easier to inspect
+      target: build
     environment:
       # run as production mode
       - NODE_ENV=production
+      # use external DB url,
+      # instead of localhost
+      - DATABASE_URL=${DATABASE_URL_PROD}
       # - PORT=80 # default
     ports:
-      # default 80, so expose as a safe port
+      # default 80, so expose it to safe port
       - 8888:80
+    networks:
+      - db-connection
     depends_on:
       - db
   db:
-    container_name: mongodb
-    # NOTE: `mongo` does not exist from 6.0
-    # use `mongosh` instead
-    image: mongo:6.0
     restart: always
-    # replace setup arguments
-    command: --replSet rs0
     # use default ports
     # you can override this with environment variable
-    ports:
-      - ${DB_PORT:-27017}:27017
+    build:
+      context: .
+      dockerfile: ./mongodb.Dockerfile
+      # /mongodb_replica
     volumes:
       # default to data
       # you can override this volume with environment variable
       - type: volume
         source: ${DB_VOLUME:-data}
         target: /data:db
-      # replace setup script
-      - type: bind
-        # NOTE: this is bind mount.
-        # docker may fail if there is no file in the given path
-        source: ./bin/docker-entrypoint-initdb.d
-        target: /docker-entrypoint-initdb.d
-        # restrict mongo not to change the contents of volume
-        read_only: true
     # pass environment variable
-    # environment:
-    # - MONGO_INITDB_ROOT_USERNAME
-    # - MONGO_INITDB_ROOT_PASSWORD
+    environment:
+      # passing initial authentication setup
+      - MONGO_INITDB_ROOT_USERNAME
+      - MONGO_INITDB_ROOT_PASSWORD
+      # MUST be same as service name
+      - MONGO_REPLICA_HOST=db
+      - MONGO_REPLICA_PORT=${DB_PORT:-27017}
+    networks:
+      - db-connection
+    ports:
+      - ${DB_PORT:-27017}:27017
 volumes:
   # persistent data volume for database
   data:
+networks:
+  db-connection:
+    driver: bridge
