--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
         "@types/supertest": "^2.0.12",
+        "chokidar-cli": "^3.0.0",
+        "dockerfilelint": "^1.8.0",
         "esbuild": "^0.15.7",
         "husky": "^8.0.1",
         "jest": "^29.0.2",
