--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "@swc/cli": "^0.1.57",
         "@swc/core": "^1.2.247",
         "@swc/jest": "^0.2.22",
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/jest": "^29.0.0",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
         "@types/supertest": "^2.0.12",
@@ -34,8 +36,10 @@
     },
     "dependencies": {
         "@prisma/client": "^4.3.1",
+        "bcryptjs": "^2.4.3",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0"
     }
 }
