build: add prisma doc generator

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
       # instead of localhost
       - DATABASE_URL=${DATABASE_URL_PROD}
       - JWT_SECRET
+      - WORKDIR=/usr/src/app
       # - PORT=80 # default
     ports:
       # default 80, so expose it to safe port
