--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "prisma-docs-generator": "^0.5.0"
     }
 }
