--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
         "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.37.0",
+        "@typescript-eslint/parser": "^5.37.0",
         "chokidar-cli": "^3.0.0",
         "dockerfilelint": "^1.8.0",
         "esbuild": "^0.15.7",
+        "eslint": "^8.23.1",
+        "eslint-config-xo": "^0.42.0",
+        "eslint-config-xo-typescript": "^0.53.0",
         "husky": "^8.0.1",
         "jest": "^29.0.2",
         "prisma": "^4.3.1",
         "supertest": "^6.2.4",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.3"
     },
     "dependencies": {
         "@prisma/client": "^4.3.1",
