--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "prisma-docs-generator": "^0.5.0"
+        "prisma-docs-generator": "^0.5.0",
+        "winston": "^3.8.2"
     }
 }
