--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dependencies": {
         "@prisma/client": "^4.3.1",
         "bcryptjs": "^2.4.3",
+        "bson": "^4.7.0",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
         "jsonwebtoken": "^8.5.1",
