--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.13",
         "@types/jest": "^29.0.0",
+        "@types/js-yaml": "^4.0.5",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/morgan": "^1.9.3",
         "@types/node": "^18.7.15",
         "@types/supertest": "^2.0.12",
+        "@types/swagger-ui-express": "^4.1.3",
         "@typescript-eslint/eslint-plugin": "^5.37.0",
         "@typescript-eslint/parser": "^5.37.0",
         "chokidar-cli": "^3.0.0",
@@ -45,9 +47,11 @@
         "bson": "^4.7.0",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
+        "js-yaml": "^4.1.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "prisma-docs-generator": "^0.5.0",
+        "swagger-ui-express": "^4.5.0",
         "winston": "^3.8.2"
     }
 }
