--- a/schemas/paths/users/me/delete.yaml
+++ b/schemas/paths/users/me/delete.yaml
@@ -1,9 +1,7 @@
 operationId: deleteMe
 summary: 현재 로그인한 사용자 삭제하기
 description: |
-  내부적으로 사용자를 DB에서 완전히 삭제하지는 않습니다.
-
-  따라서 새 유저를 만들 때 `name`을 현재 삭제된 상태인 유저(들)의 `name`과 같게 만들 수 없습니다.
+  해당 요청은 실제로 유저 삭제 요청을 보냅니다.
 tags:
   - User
 responses:
